Trabalho 5/expr.output
Terminais sem uso na gramática

   T_FIM
   T_TRUE
   T_FALSE


Gramática

    0 $accept: Programa $end

    1 Programa: ListaFuncoes BlocoPrincipal
    2         | BlocoPrincipal

    3 ListaFuncoes: ListaFuncoes Funcao
    4             | Funcao

    5 Funcao: TipoRetorno T_ID T_ABRE_PARENTESES DeclParametros T_FECHA_PARENTESES BlocoPrincipal
    6       | TipoRetorno T_ID T_ABRE_PARENTESES T_FECHA_PARENTESES BlocoPrincipal

    7 TipoRetorno: T_VOID
    8            | T_INT
    9            | T_DOUBLE
   10            | T_STRING

   11 DeclParametros: DeclParametros T_VIRGULA Parametro
   12               | Parametro

   13 Parametro: Tipo T_ID

   14 BlocoPrincipal: T_ABRE_CHAVES Declaracoes ListaCmd T_FECHA_CHAVES
   15               | T_ABRE_CHAVES ListaCmd T_FECHA_CHAVES

   16 Declaracoes: Declaracoes Declaracao
   17            | Declaracao

   18 Declaracao: Tipo ListaId T_PONTO_E_VIRGULA

   19 Tipo: T_INT
   20     | T_DOUBLE
   21     | T_STRING

   22 ListaId: ListaId T_VIRGULA T_ID
   23        | T_ID

   24 Bloco: T_ABRE_CHAVES ListaCmd T_FECHA_CHAVES

   25 ListaCmd: ListaCmd Comando
   26         | Comando

   27 Comando: CmdSe
   28        | CmdEnquanto
   29        | CmdAtrib
   30        | CmdEscrita
   31        | CmdLeitura
   32        | ChamadaProc
   33        | Retorno

   34 Retorno: T_RETURN ExpressaoAritmetica T_PONTO_E_VIRGULA
   35        | T_RETURN T_LITERAL T_PONTO_E_VIRGULA

   36 CmdSe: T_IF T_ABRE_PARENTESES ExpressaoLogica T_FECHA_PARENTESES MLogico Bloco
   37      | T_IF T_ABRE_PARENTESES ExpressaoLogica T_FECHA_PARENTESES MLogico Bloco NLogico T_ELSE MLogico Bloco

   38 NLogico: %empty

   39 CmdEnquanto: T_WHILE MLogico T_ABRE_PARENTESES ExpressaoLogica T_FECHA_PARENTESES MLogico Bloco

   40 CmdAtrib: T_ID T_IGUAL ExpressaoAritmetica T_PONTO_E_VIRGULA
   41         | T_ID T_IGUAL T_LITERAL T_PONTO_E_VIRGULA

   42 CmdEscrita: T_PRINT CmdEscritaMarcador T_ABRE_PARENTESES ExpressaoAritmetica T_FECHA_PARENTESES T_PONTO_E_VIRGULA
   43           | T_PRINT CmdEscritaMarcador T_ABRE_PARENTESES T_LITERAL T_FECHA_PARENTESES T_PONTO_E_VIRGULA

   44 CmdEscritaMarcador: %empty

   45 CmdLeitura: T_READ T_ABRE_PARENTESES T_ID T_FECHA_PARENTESES T_PONTO_E_VIRGULA

   46 ChamadaProc: ChamadaFuncao T_PONTO_E_VIRGULA

   47 ChamadaFuncao: T_ID T_ABRE_PARENTESES ListaParametros T_FECHA_PARENTESES
   48              | T_ID T_ABRE_PARENTESES T_FECHA_PARENTESES

   49 ListaParametros: ListaParametros T_VIRGULA ExpressaoAritmetica
   50                | ListaParametros T_VIRGULA T_LITERAL
   51                | ExpressaoAritmetica
   52                | T_LITERAL

   53 ExpressaoAritmetica: ExpressaoAritmetica T_ADICAO TExpressaoAritmetica
   54                    | ExpressaoAritmetica T_SUBTRACAO TExpressaoAritmetica
   55                    | ExpressaoAritmetica T_BIT_DIREITA TExpressaoAritmetica
   56                    | ExpressaoAritmetica T_BIT_ESQUERDA TExpressaoAritmetica
   57                    | TExpressaoAritmetica

   58 TExpressaoAritmetica: TExpressaoAritmetica T_MULTIPLICACAO FExpressaoAritmetica
   59                     | TExpressaoAritmetica T_DIVISAO FExpressaoAritmetica
   60                     | TExpressaoAritmetica T_RESTO FExpressaoAritmetica
   61                     | FExpressaoAritmetica
   62                     | ChamadaFuncao

   63 FExpressaoAritmetica: T_ABRE_PARENTESES ExpressaoAritmetica T_FECHA_PARENTESES
   64                     | T_SUBTRACAO FExpressaoAritmetica
   65                     | T_NUM
   66                     | T_ID

   67 ExpressaoLogica: ExpressaoLogica T_AND MLogico FExpressaoLogica
   68                | ExpressaoLogica T_OR MLogico FExpressaoLogica
   69                | FExpressaoLogica

   70 MLogico: %empty

   71 FExpressaoLogica: T_NOT FExpressaoLogica
   72                 | T_ABRE_PARENTESES ExpressaoLogica T_FECHA_PARENTESES
   73                 | ExpressaoAritmetica T_IGUAL_IGUAL ExpressaoAritmetica
   74                 | ExpressaoAritmetica T_DIFERENTE ExpressaoAritmetica
   75                 | ExpressaoAritmetica T_MAIOR ExpressaoAritmetica
   76                 | ExpressaoAritmetica T_MAIOR_IGUAL ExpressaoAritmetica
   77                 | ExpressaoAritmetica T_MENOR ExpressaoAritmetica
   78                 | ExpressaoAritmetica T_MENOR_IGUAL ExpressaoAritmetica


Terminais, com as regras onde eles aparecem

$end (0) 0
error (256)
T_BIT_DIREITA (258) 55
T_BIT_ESQUERDA (259) 56
T_ADICAO (260) 53
T_SUBTRACAO (261) 54 64
T_MULTIPLICACAO (262) 58
T_DIVISAO (263) 59
T_RESTO (264) 60
T_IGUAL (265) 40 41
T_ABRE_PARENTESES (266) 5 6 36 37 39 42 43 45 47 48 63 72
T_FECHA_PARENTESES (267) 5 6 36 37 39 42 43 45 47 48 63 72
T_ABRE_CHAVES (268) 14 15 24
T_FECHA_CHAVES (269) 14 15 24
T_INT (270) 8 19
T_DOUBLE (271) 9 20
T_STRING (272) 10 21
T_VOID (273) 7
T_IF (274) 36 37
T_WHILE (275) 39
T_ELSE (276) 37
T_PRINT (277) 42 43
T_READ (278) 45
T_RETURN (279) 34 35
T_ID (280) 5 6 13 22 23 40 41 45 47 48 66
T_LITERAL (281) 35 41 43 50 52
T_FIM (282)
T_NUM (283) 65
T_VIRGULA (284) 11 22 49 50
T_PONTO_E_VIRGULA (285) 18 34 35 40 41 42 43 45 46
T_AND (286) 67
T_NOT (287) 71
T_OR (288) 68
T_TRUE (289)
T_FALSE (290)
T_MAIOR_IGUAL (291) 76
T_MENOR_IGUAL (292) 78
T_DIFERENTE (293) 74
T_IGUAL_IGUAL (294) 73
T_MAIOR (295) 75
T_MENOR (296) 77


Não terminais com as regras onde eles aparecem

$accept (42)
    à esquerda: 0
Programa (43)
    à esquerda: 1 2, à direita: 0
ListaFuncoes (44)
    à esquerda: 3 4, à direita: 1 3
Funcao (45)
    à esquerda: 5 6, à direita: 3 4
TipoRetorno (46)
    à esquerda: 7 8 9 10, à direita: 5 6
DeclParametros (47)
    à esquerda: 11 12, à direita: 5 11
Parametro (48)
    à esquerda: 13, à direita: 11 12
BlocoPrincipal (49)
    à esquerda: 14 15, à direita: 1 2 5 6
Declaracoes (50)
    à esquerda: 16 17, à direita: 14 16
Declaracao (51)
    à esquerda: 18, à direita: 16 17
Tipo (52)
    à esquerda: 19 20 21, à direita: 13 18
ListaId (53)
    à esquerda: 22 23, à direita: 18 22
Bloco (54)
    à esquerda: 24, à direita: 36 37 39
ListaCmd (55)
    à esquerda: 25 26, à direita: 14 15 24 25
Comando (56)
    à esquerda: 27 28 29 30 31 32 33, à direita: 25 26
Retorno (57)
    à esquerda: 34 35, à direita: 33
CmdSe (58)
    à esquerda: 36 37, à direita: 27
NLogico (59)
    à esquerda: 38, à direita: 37
CmdEnquanto (60)
    à esquerda: 39, à direita: 28
CmdAtrib (61)
    à esquerda: 40 41, à direita: 29
CmdEscrita (62)
    à esquerda: 42 43, à direita: 30
CmdEscritaMarcador (63)
    à esquerda: 44, à direita: 42 43
CmdLeitura (64)
    à esquerda: 45, à direita: 31
ChamadaProc (65)
    à esquerda: 46, à direita: 32
ChamadaFuncao (66)
    à esquerda: 47 48, à direita: 46 62
ListaParametros (67)
    à esquerda: 49 50 51 52, à direita: 47 49 50
ExpressaoAritmetica (68)
    à esquerda: 53 54 55 56 57, à direita: 34 40 42 49 51 53 54 55
    56 63 73 74 75 76 77 78
TExpressaoAritmetica (69)
    à esquerda: 58 59 60 61 62, à direita: 53 54 55 56 57 58 59 60
FExpressaoAritmetica (70)
    à esquerda: 63 64 65 66, à direita: 58 59 60 61 64
ExpressaoLogica (71)
    à esquerda: 67 68 69, à direita: 36 37 39 67 68 72
MLogico (72)
    à esquerda: 70, à direita: 36 37 39 67 68
FExpressaoLogica (73)
    à esquerda: 71 72 73 74 75 76 77 78, à direita: 67 68 69 71


Estado 0

    0 $accept: . Programa $end

    T_ABRE_CHAVES  deslocar, e ir ao estado 1
    T_INT          deslocar, e ir ao estado 2
    T_DOUBLE       deslocar, e ir ao estado 3
    T_STRING       deslocar, e ir ao estado 4
    T_VOID         deslocar, e ir ao estado 5

    Programa        ir ao estado 6
    ListaFuncoes    ir ao estado 7
    Funcao          ir ao estado 8
    TipoRetorno     ir ao estado 9
    BlocoPrincipal  ir ao estado 10


Estado 1

   14 BlocoPrincipal: T_ABRE_CHAVES . Declaracoes ListaCmd T_FECHA_CHAVES
   15               | T_ABRE_CHAVES . ListaCmd T_FECHA_CHAVES

    T_INT     deslocar, e ir ao estado 11
    T_DOUBLE  deslocar, e ir ao estado 12
    T_STRING  deslocar, e ir ao estado 13
    T_IF      deslocar, e ir ao estado 14
    T_WHILE   deslocar, e ir ao estado 15
    T_PRINT   deslocar, e ir ao estado 16
    T_READ    deslocar, e ir ao estado 17
    T_RETURN  deslocar, e ir ao estado 18
    T_ID      deslocar, e ir ao estado 19

    Declaracoes    ir ao estado 20
    Declaracao     ir ao estado 21
    Tipo           ir ao estado 22
    ListaCmd       ir ao estado 23
    Comando        ir ao estado 24
    Retorno        ir ao estado 25
    CmdSe          ir ao estado 26
    CmdEnquanto    ir ao estado 27
    CmdAtrib       ir ao estado 28
    CmdEscrita     ir ao estado 29
    CmdLeitura     ir ao estado 30
    ChamadaProc    ir ao estado 31
    ChamadaFuncao  ir ao estado 32


Estado 2

    8 TipoRetorno: T_INT .

    $padrão  reduzir usando a regra 8 (TipoRetorno)


Estado 3

    9 TipoRetorno: T_DOUBLE .

    $padrão  reduzir usando a regra 9 (TipoRetorno)


Estado 4

   10 TipoRetorno: T_STRING .

    $padrão  reduzir usando a regra 10 (TipoRetorno)


Estado 5

    7 TipoRetorno: T_VOID .

    $padrão  reduzir usando a regra 7 (TipoRetorno)


Estado 6

    0 $accept: Programa . $end

    $end  deslocar, e ir ao estado 33


Estado 7

    1 Programa: ListaFuncoes . BlocoPrincipal
    3 ListaFuncoes: ListaFuncoes . Funcao

    T_ABRE_CHAVES  deslocar, e ir ao estado 1
    T_INT          deslocar, e ir ao estado 2
    T_DOUBLE       deslocar, e ir ao estado 3
    T_STRING       deslocar, e ir ao estado 4
    T_VOID         deslocar, e ir ao estado 5

    Funcao          ir ao estado 34
    TipoRetorno     ir ao estado 9
    BlocoPrincipal  ir ao estado 35


Estado 8

    4 ListaFuncoes: Funcao .

    $padrão  reduzir usando a regra 4 (ListaFuncoes)


Estado 9

    5 Funcao: TipoRetorno . T_ID T_ABRE_PARENTESES DeclParametros T_FECHA_PARENTESES BlocoPrincipal
    6       | TipoRetorno . T_ID T_ABRE_PARENTESES T_FECHA_PARENTESES BlocoPrincipal

    T_ID  deslocar, e ir ao estado 36


Estado 10

    2 Programa: BlocoPrincipal .

    $padrão  reduzir usando a regra 2 (Programa)


Estado 11

   19 Tipo: T_INT .

    $padrão  reduzir usando a regra 19 (Tipo)


Estado 12

   20 Tipo: T_DOUBLE .

    $padrão  reduzir usando a regra 20 (Tipo)


Estado 13

   21 Tipo: T_STRING .

    $padrão  reduzir usando a regra 21 (Tipo)


Estado 14

   36 CmdSe: T_IF . T_ABRE_PARENTESES ExpressaoLogica T_FECHA_PARENTESES MLogico Bloco
   37      | T_IF . T_ABRE_PARENTESES ExpressaoLogica T_FECHA_PARENTESES MLogico Bloco NLogico T_ELSE MLogico Bloco

    T_ABRE_PARENTESES  deslocar, e ir ao estado 37


Estado 15

   39 CmdEnquanto: T_WHILE . MLogico T_ABRE_PARENTESES ExpressaoLogica T_FECHA_PARENTESES MLogico Bloco

    $padrão  reduzir usando a regra 70 (MLogico)

    MLogico  ir ao estado 38


Estado 16

   42 CmdEscrita: T_PRINT . CmdEscritaMarcador T_ABRE_PARENTESES ExpressaoAritmetica T_FECHA_PARENTESES T_PONTO_E_VIRGULA
   43           | T_PRINT . CmdEscritaMarcador T_ABRE_PARENTESES T_LITERAL T_FECHA_PARENTESES T_PONTO_E_VIRGULA

    $padrão  reduzir usando a regra 44 (CmdEscritaMarcador)

    CmdEscritaMarcador  ir ao estado 39


Estado 17

   45 CmdLeitura: T_READ . T_ABRE_PARENTESES T_ID T_FECHA_PARENTESES T_PONTO_E_VIRGULA

    T_ABRE_PARENTESES  deslocar, e ir ao estado 40


Estado 18

   34 Retorno: T_RETURN . ExpressaoAritmetica T_PONTO_E_VIRGULA
   35        | T_RETURN . T_LITERAL T_PONTO_E_VIRGULA

    T_SUBTRACAO        deslocar, e ir ao estado 41
    T_ABRE_PARENTESES  deslocar, e ir ao estado 42
    T_ID               deslocar, e ir ao estado 43
    T_LITERAL          deslocar, e ir ao estado 44
    T_NUM              deslocar, e ir ao estado 45

    ChamadaFuncao         ir ao estado 46
    ExpressaoAritmetica   ir ao estado 47
    TExpressaoAritmetica  ir ao estado 48
    FExpressaoAritmetica  ir ao estado 49


Estado 19

   40 CmdAtrib: T_ID . T_IGUAL ExpressaoAritmetica T_PONTO_E_VIRGULA
   41         | T_ID . T_IGUAL T_LITERAL T_PONTO_E_VIRGULA
   47 ChamadaFuncao: T_ID . T_ABRE_PARENTESES ListaParametros T_FECHA_PARENTESES
   48              | T_ID . T_ABRE_PARENTESES T_FECHA_PARENTESES

    T_IGUAL            deslocar, e ir ao estado 50
    T_ABRE_PARENTESES  deslocar, e ir ao estado 51


Estado 20

   14 BlocoPrincipal: T_ABRE_CHAVES Declaracoes . ListaCmd T_FECHA_CHAVES
   16 Declaracoes: Declaracoes . Declaracao

    T_INT     deslocar, e ir ao estado 11
    T_DOUBLE  deslocar, e ir ao estado 12
    T_STRING  deslocar, e ir ao estado 13
    T_IF      deslocar, e ir ao estado 14
    T_WHILE   deslocar, e ir ao estado 15
    T_PRINT   deslocar, e ir ao estado 16
    T_READ    deslocar, e ir ao estado 17
    T_RETURN  deslocar, e ir ao estado 18
    T_ID      deslocar, e ir ao estado 19

    Declaracao     ir ao estado 52
    Tipo           ir ao estado 22
    ListaCmd       ir ao estado 53
    Comando        ir ao estado 24
    Retorno        ir ao estado 25
    CmdSe          ir ao estado 26
    CmdEnquanto    ir ao estado 27
    CmdAtrib       ir ao estado 28
    CmdEscrita     ir ao estado 29
    CmdLeitura     ir ao estado 30
    ChamadaProc    ir ao estado 31
    ChamadaFuncao  ir ao estado 32


Estado 21

   17 Declaracoes: Declaracao .

    $padrão  reduzir usando a regra 17 (Declaracoes)


Estado 22

   18 Declaracao: Tipo . ListaId T_PONTO_E_VIRGULA

    T_ID  deslocar, e ir ao estado 54

    ListaId  ir ao estado 55


Estado 23

   15 BlocoPrincipal: T_ABRE_CHAVES ListaCmd . T_FECHA_CHAVES
   25 ListaCmd: ListaCmd . Comando

    T_FECHA_CHAVES  deslocar, e ir ao estado 56
    T_IF            deslocar, e ir ao estado 14
    T_WHILE         deslocar, e ir ao estado 15
    T_PRINT         deslocar, e ir ao estado 16
    T_READ          deslocar, e ir ao estado 17
    T_RETURN        deslocar, e ir ao estado 18
    T_ID            deslocar, e ir ao estado 19

    Comando        ir ao estado 57
    Retorno        ir ao estado 25
    CmdSe          ir ao estado 26
    CmdEnquanto    ir ao estado 27
    CmdAtrib       ir ao estado 28
    CmdEscrita     ir ao estado 29
    CmdLeitura     ir ao estado 30
    ChamadaProc    ir ao estado 31
    ChamadaFuncao  ir ao estado 32


Estado 24

   26 ListaCmd: Comando .

    $padrão  reduzir usando a regra 26 (ListaCmd)


Estado 25

   33 Comando: Retorno .

    $padrão  reduzir usando a regra 33 (Comando)


Estado 26

   27 Comando: CmdSe .

    $padrão  reduzir usando a regra 27 (Comando)


Estado 27

   28 Comando: CmdEnquanto .

    $padrão  reduzir usando a regra 28 (Comando)


Estado 28

   29 Comando: CmdAtrib .

    $padrão  reduzir usando a regra 29 (Comando)


Estado 29

   30 Comando: CmdEscrita .

    $padrão  reduzir usando a regra 30 (Comando)


Estado 30

   31 Comando: CmdLeitura .

    $padrão  reduzir usando a regra 31 (Comando)


Estado 31

   32 Comando: ChamadaProc .

    $padrão  reduzir usando a regra 32 (Comando)


Estado 32

   46 ChamadaProc: ChamadaFuncao . T_PONTO_E_VIRGULA

    T_PONTO_E_VIRGULA  deslocar, e ir ao estado 58


Estado 33

    0 $accept: Programa $end .

    $padrão  aceitar


Estado 34

    3 ListaFuncoes: ListaFuncoes Funcao .

    $padrão  reduzir usando a regra 3 (ListaFuncoes)


Estado 35

    1 Programa: ListaFuncoes BlocoPrincipal .

    $padrão  reduzir usando a regra 1 (Programa)


Estado 36

    5 Funcao: TipoRetorno T_ID . T_ABRE_PARENTESES DeclParametros T_FECHA_PARENTESES BlocoPrincipal
    6       | TipoRetorno T_ID . T_ABRE_PARENTESES T_FECHA_PARENTESES BlocoPrincipal

    T_ABRE_PARENTESES  deslocar, e ir ao estado 59


Estado 37

   36 CmdSe: T_IF T_ABRE_PARENTESES . ExpressaoLogica T_FECHA_PARENTESES MLogico Bloco
   37      | T_IF T_ABRE_PARENTESES . ExpressaoLogica T_FECHA_PARENTESES MLogico Bloco NLogico T_ELSE MLogico Bloco

    T_SUBTRACAO        deslocar, e ir ao estado 41
    T_ABRE_PARENTESES  deslocar, e ir ao estado 60
    T_ID               deslocar, e ir ao estado 43
    T_NUM              deslocar, e ir ao estado 45
    T_NOT              deslocar, e ir ao estado 61

    ChamadaFuncao         ir ao estado 46
    ExpressaoAritmetica   ir ao estado 62
    TExpressaoAritmetica  ir ao estado 48
    FExpressaoAritmetica  ir ao estado 49
    ExpressaoLogica       ir ao estado 63
    FExpressaoLogica      ir ao estado 64


Estado 38

   39 CmdEnquanto: T_WHILE MLogico . T_ABRE_PARENTESES ExpressaoLogica T_FECHA_PARENTESES MLogico Bloco

    T_ABRE_PARENTESES  deslocar, e ir ao estado 65


Estado 39

   42 CmdEscrita: T_PRINT CmdEscritaMarcador . T_ABRE_PARENTESES ExpressaoAritmetica T_FECHA_PARENTESES T_PONTO_E_VIRGULA
   43           | T_PRINT CmdEscritaMarcador . T_ABRE_PARENTESES T_LITERAL T_FECHA_PARENTESES T_PONTO_E_VIRGULA

    T_ABRE_PARENTESES  deslocar, e ir ao estado 66


Estado 40

   45 CmdLeitura: T_READ T_ABRE_PARENTESES . T_ID T_FECHA_PARENTESES T_PONTO_E_VIRGULA

    T_ID  deslocar, e ir ao estado 67


Estado 41

   64 FExpressaoAritmetica: T_SUBTRACAO . FExpressaoAritmetica

    T_SUBTRACAO        deslocar, e ir ao estado 41
    T_ABRE_PARENTESES  deslocar, e ir ao estado 42
    T_ID               deslocar, e ir ao estado 68
    T_NUM              deslocar, e ir ao estado 45

    FExpressaoAritmetica  ir ao estado 69


Estado 42

   63 FExpressaoAritmetica: T_ABRE_PARENTESES . ExpressaoAritmetica T_FECHA_PARENTESES

    T_SUBTRACAO        deslocar, e ir ao estado 41
    T_ABRE_PARENTESES  deslocar, e ir ao estado 42
    T_ID               deslocar, e ir ao estado 43
    T_NUM              deslocar, e ir ao estado 45

    ChamadaFuncao         ir ao estado 46
    ExpressaoAritmetica   ir ao estado 70
    TExpressaoAritmetica  ir ao estado 48
    FExpressaoAritmetica  ir ao estado 49


Estado 43

   47 ChamadaFuncao: T_ID . T_ABRE_PARENTESES ListaParametros T_FECHA_PARENTESES
   48              | T_ID . T_ABRE_PARENTESES T_FECHA_PARENTESES
   66 FExpressaoAritmetica: T_ID .

    T_ABRE_PARENTESES  deslocar, e ir ao estado 51

    $padrão  reduzir usando a regra 66 (FExpressaoAritmetica)


Estado 44

   35 Retorno: T_RETURN T_LITERAL . T_PONTO_E_VIRGULA

    T_PONTO_E_VIRGULA  deslocar, e ir ao estado 71


Estado 45

   65 FExpressaoAritmetica: T_NUM .

    $padrão  reduzir usando a regra 65 (FExpressaoAritmetica)


Estado 46

   62 TExpressaoAritmetica: ChamadaFuncao .

    $padrão  reduzir usando a regra 62 (TExpressaoAritmetica)


Estado 47

   34 Retorno: T_RETURN ExpressaoAritmetica . T_PONTO_E_VIRGULA
   53 ExpressaoAritmetica: ExpressaoAritmetica . T_ADICAO TExpressaoAritmetica
   54                    | ExpressaoAritmetica . T_SUBTRACAO TExpressaoAritmetica
   55                    | ExpressaoAritmetica . T_BIT_DIREITA TExpressaoAritmetica
   56                    | ExpressaoAritmetica . T_BIT_ESQUERDA TExpressaoAritmetica

    T_BIT_DIREITA      deslocar, e ir ao estado 72
    T_BIT_ESQUERDA     deslocar, e ir ao estado 73
    T_ADICAO           deslocar, e ir ao estado 74
    T_SUBTRACAO        deslocar, e ir ao estado 75
    T_PONTO_E_VIRGULA  deslocar, e ir ao estado 76


Estado 48
